# RemoteAdventurer

./: .gitignore  README.md  stack.xml
NXTLeap/: NXTLeap.sln
NXTLeap/NXTLeap/: Form1.Designer.cs  Form1.cs  Form1.resx  NXTLeap.csproj  Program.cs
NXTLeap/NXTLeap/Objects/: NXTLeapListener.cs
NXTLeap/NXTLeap/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
NXTRemote/: NXTRemote.sln
NXTRemote/GaugeLib/: BarIndicator.cs  Enumerations.cs  GaugeLib.csproj  GaugeRange.cs  Indicator.cs  LinearBarIndicator.cs  LinearScale.cs  MarkerIndicator.cs  NeedleIndicator.cs  RadialBarIndicator.cs  RadialGaugeHelper.cs  RadialScale.cs  RadialScaleHelper.cs  Scale.cs  Tick.cs
NXTRemote/GaugeLib/Properties/: AssemblyInfo.cs
NXTRemote/GaugeLib/Themes/: generic.xaml
NXTRemote/NXTRemote/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  NXTRemote.csproj  NXTRemote_2013_03_15_12_29_06.sap
NXTRemote/NXTRemote/Controllers/: XML.cs
NXTRemote/NXTRemote/Gauges/: ColorRange.cs  GradientConverter.cs  RangeColorConverter.cs  RangeTemplateConverter.cs  SizeConverter.cs  TemplateRange.cs
NXTRemote/NXTRemote/Objects/: MyCheckBox.cs  NXT.cs  NXTEntity.cs  NXTOrder.cs
NXTRemote/NXTRemote/Properties/: AssemblyInfo.cs  WMAppManifest.xml
NXTRemote/NXTRemote/Sockets/: SocketWrapper.cs  TwoSensesSocket.cs
nxt_adventurer/: CMakeLists.txt  CMakeLists.txt.old  mainpage.dox  manifest.xml  nxt_adventurer.files  nxt_adventurer.includes  robot.launch  robot.yaml
nxt_adventurer/include/nxt_adventurer/: RA_Commander.h  RA_Dashboard.h  RA_Listener.h  RA_XMLHelper.h
nxt_adventurer/msg/: Order.msg
nxt_adventurer/src/: RA_Commander.cpp  RA_Dashboard.cpp  RA_Listener.cpp  RA_XMLHelper.cpp  adventurer_node.cpp  lib_sample.cpp  teleop_node.cpp
nxt_explorer/: mainpage.dox  manifest.xml  nxt_explorer.includes
nxt_explorer/include/nxt_explorer/: RA_Mode.h
nxt_explorer/src/: main.cpp
pugixml/: CMakeLists.txt  mainpage.dox  manifest.xml
remote_adventurer_client/: CMakeLists.txt  mainpage.dox  manifest.xml  remote_adventurer_client.includes
remote_adventurer_client/include/remote_adventurer_client/: RA_ConnectDialog.h  RA_ControllerView.h  RA_MainWindow.h  RA_RemoteClientApp.h  RA_TcpClient.h  RA_UltrasonicViewer.h  RA_WheelMeter.h  RA_Window.h
remote_adventurer_client/src/: RA_ConnectDialog.cpp  RA_ControllerView.cpp  RA_MainWindow.cpp  RA_RemoteClientApp.cpp  RA_TcpClient.cpp  RA_UltrasonicViewer.cpp  RA_WheelMeter.cpp  RA_Window.cpp  main.cpp
remote_adventurer_server/: .CMakeLists.txt.swp  CMakeLists.txt  mainpage.dox  manifest.xml  remote_adventurer_server.files  remote_adventurer_server.includes  remote_server.launch
remote_adventurer_server/include/remote_adventurer_server/: RA_TcpServer.h
remote_adventurer_server/src/: RA_TcpServer.cpp  remote_server.cpp  test_client.cpp  test_client.h
